--- a/drivers/char/tpm/Kconfig
+++ b/drivers/char/tpm/Kconfig
@@ -155,7 +155,7 @@ config TCG_VTPM_PROXY
 
 config TCG_FTPM_OPTEE
 	tristate "OP-TEE fTPM Interface"
-	depends on TEE && ARM64
+	depends on TEE
 	---help---
 	  This driver proxies for an OP-TEE fTPM TA.
 
