--- a/drivers/tee/optee/Makefile
+++ b/drivers/tee/optee/Makefile
@@ -6,3 +6,11 @@ optee-objs += rpc.o
 optee-objs += supp.o
 optee-objs += shm_pool.o
 optee-objs += grpc.o
+
+CFLAGS_optee.o = -O0
+CFLAGS_core.o = -O0
+CFLAGS_call.o = -O0
+CFLAGS_rpc.o = -O0
+CFLAGS_supp.o = -O0
+CFLAGS_shm_pool.o = -O0
+CFLAGS_grpc.o = -O0
